--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 #Marshmallows.github.io
 <!DOCTYPE html>
 <html>
+  <body>
 <script type='text/javascript' id='susi-bot-script' data-userid='bc04aed7842989ea43ddfb7091077fef' data-group='Food and Drink' data-language='en' data-skill='Marshmallows' src='https://skills.susi.ai/susi-chatbot.js'></script>
-</html>
+  </body>
+ </html>
